# thinktank-protocol

./: LICENSE  README.md  __init__.py  config.py  core.py  personas.py  pyproject.toml  relay-queue.json  relay-state.json  run.py  setup.py
.github/workflows/: relay-daemon.yml  relay-realtime.yml  test.yml
tests/: __init__.py  test_anthropic_backend.py  test_call_api.py  test_config.py  test_core.py  test_edge_cases.py
thinktank_protocol/: __init__.py  config.py  core.py  personas.py  run.py
