[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "thinktank-protocol"
version = "1.0.1"
description = "ThinkTank 双批判协作引擎 — 183轮制度演化的可移植内核"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ThinkTank Collective"},
]
keywords = [
    "ai-collaboration",
    "critique-engine",
    "multi-agent",
    "cognitive-science",
    "zero-overlap",
    "双批判",
    "认知签名",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jeckwalt1133/thinktank-protocol"
Repository = "https://github.com/jeckwalt1133/thinktank-protocol"
"Bug Tracker" = "https://github.com/jeckwalt1133/thinktank-protocol/issues"

[project.scripts]
thinktank-critique = "thinktank_protocol.run:main"

[tool.setuptools.packages.find]
include = ["thinktank_protocol*"]

[tool.setuptools.package-data]
thinktank_protocol = ["*.py"]
